# jwt-compact

./: Cargo.toml  README.md  rust-toolchain.toml
benches/: encoding.rs
e2e-tests/no-std/: Cargo.toml  build.rs
e2e-tests/no-std/src/: main.rs
e2e-tests/wasm/: Cargo.toml  README.md  package.json  test.js
e2e-tests/wasm/src/: lib.rs
src/: alg.rs  claims.rs  error.rs  jwk.rs  lib.rs  token.rs  traits.rs
src/alg/: eddsa_compact.rs  eddsa_dalek.rs  eddsa_sodium.rs  es256k.rs  generic.rs  hmacs.rs  k256.rs  p256.rs  rsa.rs
tests/: algorithms.rs  jwk.rs  rsa.rs  version_match.rs
tests/shared/: mod.rs
