[package]
name = "jwt-compact-wasm"
version = "0.0.19"
authors = [
    "Alex Ostrovski <ostrovski.alex@gmail.com>",
    "Polimec Foundation <info@polimec.org>",
]
edition = "2021"
license = "Apache-2.0"
description = "Usability of `jwt-compact` in WASM"
repository = "https://github.com/slowli/jwt-compact"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[dependencies]
wasm-bindgen = "0.2.95"

chrono = { version = "0.4.38", features = ["wasmbind", "serde"] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Set up `getrandom` crate to use the host JS CSPRNG.
getrandom = { version = "0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.jwt-compact]
path = "../.."
default-features = false
features = ["clock", "ed25519-dalek", "rsa", "k256", "p256"]

[features]
std = ["getrandom/std", "jwt-compact/std", "serde/std", "serde_json/std"]
clock = []
es256k = ["jwt-compact/es256k"]
rsa = []
ciborium = []
ed25519-dalek = []